#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

################################################################################
# changes in development version since last release 
################################################################################

################################################################################  
################################################################################  


################################################################################
### version 3.1.1 
################################################################################  

# IntaRNA
- base pairs details only computed if needed for output (speedup for large -n)
- predefined parameter sets for loading (Turner04, Turner99, Andronescu07)
- 'tRegion' and 'qRegion' now available for and applied to multi-sequence input

################################################################################  
  
190924 Martin Raden
 * IntaRNA/general :
   - numStringLength() : obsolete
 * IntaRNA/OutputHandlerText : 
   + explicit '+' for positive indices if relative indexing enabled
 * bin/CommandLineParsing :
   * validate_indexRangeList() :
     + sequence id in error message
   * parseRegion() :
     + range check per sequence with sequence-specific error message
     - single sequence input condition removed : ranges applied on all sequences
 * IntaRNA/AccessibilityVrna :
   * construction() : 
     + bugfix: only call VRNA routines if seq.size() > 4
  
190923 Martin Raden
 + m4/m4-ax_boost_iostreams.m4
 + m4/m4-ax_check_zlib.m4
 * configure.ac :
   * ViennaRNA version >= 2.4.14
   + check for boost::iostreams library
   + check for zlib library
 * IntaRNA/OutputConstraint :
   + needBPs : whether or not traceback of interaction base pairs is needed
 * IntaRNA/PredictorMfe :
   * reportOptima() :