@@ -9,6 +9,10 @@
 ################################################################################
 # changes in development version since last release 
 ################################################################################
+  
+191007 Martin Raden
+ * bin/CommandLineParsing :
+   * bugfix accNoLP and accNoGUend checks for energy!=V
 
 ################################################################################  
 ################################################################################  
